<package format="3">
  <name>tf2_rs</name>
  <version>0.1.0</version>
  <description>ROS 2 TF2 bindings for Rust using cxx</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <depend>rclrs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_msgs</depend>



  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
